--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="stretch_title">Stretch</string>
     <string name="exercs_title">Exercise</string>
     <string name="results_title">Results</string>
-    <string name="speed_title">Speed</string>
+    <string name="reps_title">Reps</string>
     <string name="duse_title">Daily Use</string>
     <string name="button_init_title">Press to turn on</string>
     <string name="flex_title">Flexion</string>
