Updated to Tiny Tile board and Battery Reader

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="hold_title">Hold Time</string>
     <string name="email_title">Talk to Physician</string>
     <string name="speed_title">Speed</string>
+    <string name="battery_message">HERO battery:</string>
 </resources>
